--- a/src/site.html
+++ b/src/site.html
@@ -14,7 +14,7 @@
 
 
 </head>
-<body>
+<body class="bg-white">
 
 
 <nav class="bg-white dark:bg-gray-900 fixed w-full z-20 top-0 start-0 border-b border-gray-200 dark:border-gray-600">
@@ -83,26 +83,12 @@
 </section>
 
 
-<div class="max-w-screen-xl mx-auto px-4 my-10 justify-center items-center">
-
-
-	<!-- <section class="flex flex-col md:flex-row items-center justify-center py-3 my-0">
-		<div class="md:w-1/2">
-			<img src="https://demo.hasthemes.com/coffee-hutt/img/welcome/1.jpg" alt="Website Image" class="w-full">
-		</div>
-		<div class="md:w-1/2 md:pl-10">
-			<h2 class="text-3xl font-bold mb-4">Welcome to Our Website</h2>
-			<p class="text-lg">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi. Sed euismod,
-				nunc eget aliquet lacinia, mauris nunc tincidunt nunc, id tincidunt urna ligula id nunc. Sed euismod,
-				nunc eget aliquet lacinia, mauris nunc tincidunt nunc, id tincidunt urna ligula id nunc.</p>
-			<a href="#" class="text-blue-500 hover:underline">Learn More</a>
-		</div>
-	</section> -->
+<div class="max-w-screen-xl mx-auto px-4 mt-10 md:mt-14 lg:mt-20 justify-center items-center">
 
 	<!-- KDO JSME? -->
-	<section class="bg-bookmark-white py-2 mt-2 lg:mt-6" id="about-us">
+	<section class="py-2" id="about-us">
 		<!-- HEADING -->
-		<div class="sm:w-3/4 lg:w-5/12 mx-auto pt-24 px-2">
+		<div class="sm:w-3/4 lg:w-5/12 mx-auto px-2">
 			<h1 class="text-3xl text-center text-bookmark-blue">Featurky</h1>
 			<p class="text-center text-bookmark-grey mt-4">
 				Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque tincidunt scelerisque libero. Etiam
@@ -170,9 +156,9 @@
 </div>
 
 
-<div class="menu flex items-center container mx-auto">
-	<section class="items-center flex flex-col mx-auto" id="nabidka-menu">
-		<div class="inline-block sm:flex items-center rounded-md shadow-sm gap-1 sm:gap-8" role="group">
+<div class="menu flex container mx-auto mt-10 md:mt-14 lg:mt-20">
+	<section class="items-center flex flex-col mx-auto w-full" id="nabidka-menu">
+		<div class="inline-block sm:flex items-center rounded-md shadow-sm gap-1 sm:gap-8 mb-8 md:mb-10 lg:mt-12" role="group">
 			<button data-content="hot" type="button"
 					class="px-2 py-4 sm:text-xl xs:text-base sm:px-8 font-medium text-gray-900 bg-white border border-gray-200 rounded-lg hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-2 focus:ring-blue-700 focus:text-blue-700 dark:bg-gray-800 dark:border-gray-700 dark:text-white dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-blue-500 dark:focus:text-white sm:line-height">
 				Teplé nápoje
@@ -186,252 +172,113 @@
 				Zákusky
 			</button>
 		</div>
-		<div class="content" id="hot">
-			<div class="bg-white py-8">
-				<div class="max-w-7xl mx-auto px-4">
-
-
-					<div class="grid grid-cols-1 md:grid-cols-3 lg:grid-cols-5 gap-6">
-						<!-- Drink Item 1 -->
-						<div
-							class="bg-white rounded-lg shadow-lg border border-gray-200 p-6 transition-transform hover:-translate-y-1 hover:shadow-xl">
-							<h3 class="text-xl font-semibold mb-2">Latte</h3>
-							<p class="text-gray-700">Espresso combined with steamed milk and a light layer of foam.</p>
-							<p class="text-gray-700 mt-2">Price: $3.99</p>
-						</div>
-
-
-						<!-- Drink Item 2 -->
-						<div
-							class="bg-white rounded-lg shadow-lg border border-gray-200 p-6 transition-transform hover:-translate-y-1 hover:shadow-xl">
-							<h3 class="text-xl font-semibold mb-2">Cappuccino</h3>
-							<p class="text-gray-700">Equal parts espresso, steamed milk, and foam, creating a creamy and
-								bold coffee.</p>
-							<p class="text-gray-700 mt-2">Price: $4.25</p>
-						</div>
-
-						<!-- Drink Item 3 -->
-						<div
-							class="bg-white rounded-lg shadow-lg border border-gray-200 p-6 transition-transform hover:-translate-y-1 hover:shadow-xl">
-							<h3 class="text-xl font-semibold mb-2">Iced Coffee</h3>
-							<p class="text-gray-700">Chilled brewed coffee served over ice.</p>
-							<p class="text-gray-700 mt-2">Price: $3.49</p>
-						</div>
-
-						<!-- Drink Item 4 -->
-						<div
-							class="bg-white rounded-lg shadow-lg border border-gray-200 p-6 transition-transform hover:-translate-y-1 hover:shadow-xl">
-							<h3 class="text-xl font-semibold mb-2">Mocha</h3>
-							<p class="text-gray-700">Espresso combined with hot milk and chocolate, topped with whipped
-								cream.</p>
-							<p class="text-gray-700 mt-2">Price: $4.50</p>
-						</div>
-
-						<!-- Drink Item 5 -->
-						<div
-							class="bg-white rounded-lg shadow-lg border border-gray-200 p-6 transition-transform hover:-translate-y-1 hover:shadow-xl">
-							<h3 class="text-xl font-semibold mb-2">Macchiato</h3>
-							<p class="text-gray-700">A shot of espresso with a dollop of steamed milk and foam.</p>
-							<p class="text-gray-700 mt-2">Price: $3.75</p>
-						</div>
-
-						<div
-							class="bg-white rounded-lg shadow-lg border border-gray-200 p-6 transition-transform hover:-translate-y-1 hover:shadow-xl">
-							<h3 class="text-xl font-semibold mb-2">Macchiato</h3>
-							<p class="text-gray-700">A shot of espresso with a dollop of steamed milk and foam.</p>
-							<p class="text-gray-700 mt-2">Price: $3.75</p>
-						</div>
-						<div
-							class="bg-white rounded-lg shadow-lg border border-gray-200 p-6 transition-transform hover:-translate-y-1 hover:shadow-xl">
-							<h3 class="text-xl font-semibold mb-2">Mocha</h3>
-							<p class="text-gray-700">Espresso combined with hot milk and chocolate, topped with whipped
-								cream.</p>
-							<p class="text-gray-700 mt-2">Price: $4.50</p>
-						</div>
-
-						<!-- Drink Item 5 -->
-						<div
-							class="bg-white rounded-lg shadow-lg border border-gray-200 p-6 transition-transform hover:-translate-y-1 hover:shadow-xl">
-							<h3 class="text-xl font-semibold mb-2">Macchiato</h3>
-							<p class="text-gray-700">A shot of espresso with a dollop of steamed milk and foam.</p>
-							<p class="text-gray-700 mt-2">Price: $3.75</p>
-						</div>
-
-						<div
-							class="bg-white rounded-lg shadow-lg border border-gray-200 p-6 transition-transform hover:-translate-y-1 hover:shadow-xl">
-							<h3 class="text-xl font-semibold mb-2">Macchiato</h3>
-							<p class="text-gray-700">A shot of espresso with a dollop of steamed milk and foam.</p>
-							<p class="text-gray-700 mt-2">Price: $3.75</p>
-						</div>
-						<div
-							class="bg-white rounded-lg shadow-lg border border-gray-200 p-6 transition-transform hover:-translate-y-1 hover:shadow-xl">
-							<h3 class="text-xl font-semibold mb-2">Macchiato</h3>
-							<p class="text-gray-700">A shot of espresso with a dollop of steamed milk and foam.</p>
-							<p class="text-gray-700 mt-2">Price: $3.75</p>
-						</div>
-					</div>
+		<div class="content w-full" id="hot">
+			<div class="bg-white rounded-lg overflow-hidden w-full">
+				<div class="px-6 py-4">
+					<ul>
+						<li class="flex justify-between items-center py-2 flex-row pointer-events-none">
+							<span class="flex-grow">Espresso</span>
+							<span>87 Kč</span>
+						</li>
+						<li class="flex justify-between items-center py-2 flex-row pointer-events-none">
+							<span class="flex-grow">Cappuccino</span>
+							<span>87 Kč</span>
+						</li>
+						<li class="flex justify-between items-center py-2 flex-row pointer-events-none">
+							<span class="flex-grow">Latte</span>
+							<span>87 Kč</span>
+						</li>
+						<li class="flex justify-between items-center py-2 flex-row pointer-events-none">
+							<span class="flex-grow">Latte</span>
+							<span>87 Kč</span>
+						</li>
+						<li class="flex justify-between items-center py-2 flex-row pointer-events-none">
+							<span class="flex-grow">Latte</span>
+							<span>87 Kč</span>
+						</li>
+						<li class="flex justify-between items-center py-2 flex-row pointer-events-none">
+							<span class="flex-grow">Latte</span>
+							<span>87 Kč</span>
+						</li>
+						<li class="flex justify-between items-center py-2 flex-row pointer-events-none">
+							<span class="flex-grow">Latte</span>
+							<span>87 Kč</span>
+						</li>
+					</ul>
 				</div>
 			</div>
 
 		</div>
-		<div class="content" id="cold">
-			<div class="bg-white py-8">
-				<div class="max-w-7xl mx-auto px-4">
-
-
-					<div class="grid grid-cols-1 md:grid-cols-3 lg:grid-cols-5 gap-6">
-						<!-- Drink Item 1 -->
-						<div
-							class="bg-white rounded-lg shadow-lg border border-gray-200 p-6 transition-transform hover:-translate-y-1 hover:shadow-xl">
-							<h3 class="text-xl font-semibold mb-2">Coca Cola</h3>
-							<p class="text-gray-700">Coca Cola lahodný nápoj plný štstí a potěšení bronze 4. test
-								tetetette</p>
-							<p class="text-gray-700 mt-2">Price: $3.99</p>
-						</div>
-
-						<!-- Drink Item 2 -->
-						<div
-							class="bg-white rounded-lg shadow-lg border border-gray-200 p-6 transition-transform hover:-translate-y-1 hover:shadow-xl">
-							<h3 class="text-xl font-semibold mb-2">Fanta</h3>
-							<p class="text-gray-700">Michal Pham je Platinum1 max.</p>
-							<p class="text-gray-700 mt-2">Price: $4.25</p>
-						</div>
-
-						<!-- Drink Item 3 -->
-						<div
-							class="bg-white rounded-lg shadow-lg border border-gray-200 p-6 transition-transform hover:-translate-y-1 hover:shadow-xl">
-							<h3 class="text-xl font-semibold mb-2">Iced Coffee</h3>
-							<p class="text-gray-700">Chilled brewed coffee served over ice.</p>
-							<p class="text-gray-700 mt-2">Price: $3.49</p>
-						</div>
-
-						<!-- Drink Item 4 -->
-						<div
-							class="bg-white rounded-lg shadow-lg border border-gray-200 p-6 transition-transform hover:-translate-y-1 hover:shadow-xl">
-							<h3 class="text-xl font-semibold mb-2">Mocha</h3>
-							<p class="text-gray-700">Espresso combined with hot milk and chocolate, topped with whipped
-								cream.</p>
-							<p class="text-gray-700 mt-2">Price: $4.50</p>
-						</div>
-
-						<!-- Drink Item 5 -->
-						<div
-							class="bg-white rounded-lg shadow-lg border border-gray-200 p-6 transition-transform hover:-translate-y-1 hover:shadow-xl">
-							<h3 class="text-xl font-semibold mb-2">Macchiato</h3>
-							<p class="text-gray-700">A shot of espresso with a dollop of steamed milk and foam.</p>
-							<p class="text-gray-700 mt-2">Price: $3.75</p>
-						</div>
-
-						<div
-							class="bg-white rounded-lg shadow-lg border border-gray-200 p-6 transition-transform hover:-translate-y-1 hover:shadow-xl">
-							<h3 class="text-xl font-semibold mb-2">Macchiato</h3>
-							<p class="text-gray-700">A shot of espresso with a dollop of steamed milk and foam.</p>
-							<p class="text-gray-700 mt-2">Price: $3.75</p>
-						</div>
-						<div
-							class="bg-white rounded-lg shadow-lg border border-gray-200 p-6 transition-transform hover:-translate-y-1 hover:shadow-xl">
-							<h3 class="text-xl font-semibold mb-2">Mocha</h3>
-							<p class="text-gray-700">Espresso combined with hot milk and chocolate, topped with whipped
-								cream.</p>
-							<p class="text-gray-700 mt-2">Price: $4.50</p>
-						</div>
-
-						<!-- Drink Item 5 -->
-						<div
-							class="bg-white rounded-lg shadow-lg border border-gray-200 p-6 transition-transform hover:-translate-y-1 hover:shadow-xl">
-							<h3 class="text-xl font-semibold mb-2">Macchiato</h3>
-							<p class="text-gray-700">A shot of espresso with a dollop of steamed milk and foam.</p>
-							<p class="text-gray-700 mt-2">Price: $3.75</p>
-						</div>
-
-						<div
-							class="bg-white rounded-lg shadow-lg border border-gray-200 p-6 transition-transform hover:-translate-y-1 hover:shadow-xl">
-							<h3 class="text-xl font-semibold mb-2">Macchiato</h3>
-							<p class="text-gray-700">A shot of espresso with a dollop of steamed milk and foam.</p>
-							<p class="text-gray-700 mt-2">Price: $3.75</p>
-						</div>
-					</div>
+		<div class="content w-full" id="cold">
+			<div class="bg-white rounded-lg overflow-hidden w-full">
+				<div class="px-6 py-4">
+					<ul>
+						<li class="flex justify-between items-center py-2 flex-row pointer-events-none">
+							<span class="flex-grow">Matcha</span>
+							<span>87 Kč</span>
+						</li>
+						<li class="flex justify-between items-center py-2 flex-row pointer-events-none">
+							<span class="flex-grow">cold brew</span>
+							<span>87 Kč</span>
+						</li>
+						<li class="flex justify-between items-center py-2 flex-row pointer-events-none">
+							<span class="flex-grow">Latte</span>
+							<span>87 Kč</span>
+						</li>
+						<li class="flex justify-between items-center py-2 flex-row pointer-events-none">
+							<span class="flex-grow">Latte</span>
+							<span>87 Kč</span>
+						</li>
+						<li class="flex justify-between items-center py-2 flex-row pointer-events-none">
+							<span class="flex-grow">Latte</span>
+							<span>87 Kč</span>
+						</li>
+						<li class="flex justify-between items-center py-2 flex-row pointer-events-none">
+							<span class="flex-grow">Latte</span>
+							<span>87 Kč</span>
+						</li>
+						<li class="flex justify-between items-center py-2 flex-row pointer-events-none">
+							<span class="flex-grow">Latte</span>
+							<span>87 Kč</span>
+						</li>
+					</ul>
 				</div>
 			</div>
 
 		</div>
-		<div class="content" id="dessert">
-			<div class="bg-white py-8">
-				<div class="max-w-7xl mx-auto px-4">
-
-
-					<div class="grid grid-cols-1 md:grid-cols-3 lg:grid-cols-5 gap-6">
-						<!-- Drink Item 1 -->
-						<div
-							class="bg-white rounded-lg shadow-lg border border-gray-200 p-6 transition-transform hover:-translate-y-1 hover:shadow-xl">
-							<h3 class="text-xl font-semibold mb-2">Croissant</h3>
-							<p class="text-gray-700">Coca Cola lahodný nápoj plný štstí a potěšení bronze 4. test
-								tetetette</p>
-							<p class="text-gray-700 mt-2">Price: $3.99</p>
-						</div>
-
-						<!-- Drink Item 2 -->
-						<div
-							class="bg-white rounded-lg shadow-lg border border-gray-200 p-6 transition-transform hover:-translate-y-1 hover:shadow-xl">
-							<h3 class="text-xl font-semibold mb-2">Buchtička</h3>
-							<p class="text-gray-700">Michal Pham je Platinum1 max.</p>
-							<p class="text-gray-700 mt-2">Price: $4.25</p>
-						</div>
-
-						<!-- Drink Item 3 -->
-						<div
-							class="bg-white rounded-lg shadow-lg border border-gray-200 p-6 transition-transform hover:-translate-y-1 hover:shadow-xl">
-							<h3 class="text-xl font-semibold mb-2">Dortíček</h3>
-							<p class="text-gray-700">Chilled brewed coffee served over ice.</p>
-							<p class="text-gray-700 mt-2">Price: $3.49</p>
-						</div>
-
-						<!-- Drink Item 4 -->
-						<div
-							class="bg-white rounded-lg shadow-lg border border-gray-200 p-6 transition-transform hover:-translate-y-1 hover:shadow-xl">
-							<h3 class="text-xl font-semibold mb-2">Mocha</h3>
-							<p class="text-gray-700">Espresso combined with hot milk and chocolate, topped with whipped
-								cream.</p>
-							<p class="text-gray-700 mt-2">Price: $4.50</p>
-						</div>
-
-						<!-- Drink Item 5 -->
-						<div
-							class="bg-white rounded-lg shadow-lg border border-gray-200 p-6 transition-transform hover:-translate-y-1 hover:shadow-xl">
-							<h3 class="text-xl font-semibold mb-2">Macchiato</h3>
-							<p class="text-gray-700">A shot of espresso with a dollop of steamed milk and foam.</p>
-							<p class="text-gray-700 mt-2">Price: $3.75</p>
-						</div>
-
-						<div
-							class="bg-white rounded-lg shadow-lg border border-gray-200 p-6 transition-transform hover:-translate-y-1 hover:shadow-xl">
-							<h3 class="text-xl font-semibold mb-2">Macchiato</h3>
-							<p class="text-gray-700">A shot of espresso with a dollop of steamed milk and foam.</p>
-							<p class="text-gray-700 mt-2">Price: $3.75</p>
-						</div>
-						<div
-							class="bg-white rounded-lg shadow-lg border border-gray-200 p-6 transition-transform hover:-translate-y-1 hover:shadow-xl">
-							<h3 class="text-xl font-semibold mb-2">Mocha</h3>
-							<p class="text-gray-700">Espresso combined with hot milk and chocolate, topped with whipped
-								cream.</p>
-							<p class="text-gray-700 mt-2">Price: $4.50</p>
-						</div>
-
-						<!-- Drink Item 5 -->
-						<div
-							class="bg-white rounded-lg shadow-lg border border-gray-200 p-6 transition-transform hover:-translate-y-1 hover:shadow-xl">
-							<h3 class="text-xl font-semibold mb-2">Macchiato</h3>
-							<p class="text-gray-700">A shot of espresso with a dollop of steamed milk and foam.</p>
-							<p class="text-gray-700 mt-2">Price: $3.75</p>
-						</div>
-
-						<div
-							class="bg-white rounded-lg shadow-lg border border-gray-200 p-6 transition-transform hover:-translate-y-1 hover:shadow-xl">
-							<h3 class="text-xl font-semibold mb-2">Macchiato</h3>
-							<p class="text-gray-700">A shot of espresso with a dollop of steamed milk and foam.</p>
-							<p class="text-gray-700 mt-2">Price: $3.75</p>
-						</div>
-					</div>
+		<div class="content w-full" id="dessert">
+			<div class="bg-white rounded-lg overflow-hidden w-full">
+				<div class="px-6 py-4">
+					<ul>
+						<li class="flex justify-between items-center py-2 flex-row pointer-events-none">
+							<span class="flex-grow">Dortík</span>
+							<span>87 Kč</span>
+						</li>
+						<li class="flex justify-between items-center py-2 flex-row pointer-events-none">
+							<span class="flex-grow">Quiche</span>
+							<span>87 Kč</span>
+						</li>
+						<li class="flex justify-between items-center py-2 flex-row pointer-events-none">
+							<span class="flex-grow">Latte</span>
+							<span>87 Kč</span>
+						</li>
+						<li class="flex justify-between items-center py-2 flex-row pointer-events-none">
+							<span class="flex-grow">Latte</span>
+							<span>87 Kč</span>
+						</li>
+						<li class="flex justify-between items-center py-2 flex-row pointer-events-none">
+							<span class="flex-grow">Latte</span>
+							<span>87 Kč</span>
+						</li>
+						<li class="flex justify-between items-center py-2 flex-row pointer-events-none">
+							<span class="flex-grow">Latte</span>
+							<span>87 Kč</span>
+						</li>
+						<li class="flex justify-between items-center py-2 flex-row pointer-events-none">
+							<span class="flex-grow">Latte</span>
+							<span>87 Kč</span>
+						</li>
+					</ul>
 				</div>
 			</div>
 
@@ -439,7 +286,7 @@
 	</section>
 </div>
 
-<section class="bg-gray-100 pt-16 pb-7 container" id="reviews">
+<section class="bg-gray-100 pt-16 pb-7 container mt-10 md:mt-14 lg:mt-20" id="reviews">
 	<div class="max-w-4xl mx-auto px-4">
 		<h2 class="text-3xl font-bold mb-4 text-center">Naše hodnocení</h2>
 		<p class="text-lg text-gray-700 mb-8 text-center">Podívejte se, co o nás říkají naši zákazníci.</p>
@@ -469,7 +316,7 @@
 
 </section>
 
-<section class="bg-white py-16" id="location">
+<section class="bg-white mt-10 md:mt-14 lg:mt-20" id="location">
 	<div class="max-w-7xl mx-auto px-4">
 		<h2 class="text-3xl font-bold mb-4 text-center">Kde nás najdete?</h2>
 		<p class="text-lg text-gray-700 mb-8 text-center">Nacházíme se v samém srdci Václavského náměstí.</p>
@@ -483,7 +330,7 @@
 
 </section>
 
-<footer class="bg-purple-200">
+<footer class="bg-purple-200 mt-10 md:mt-14 lg:mt-20">
 	<div class="px-4 pt-16 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8">
 		<div class="grid gap-10 row-gap-6 mb-8 sm:grid-cols-3 lg:grid-cols-3">
 			<div class="sm:col-span-1">
